# nixos-manager

./: .travis.yml  Readme.org  build.nix  default.nix  nix-manager.cabal  nixos-manager.cabal  options.json  packages.nix  shell.nix
nix/: brotli.nix  nixos-unstable.json  nixos-unstable.nix  sources.json
src/: Main.hs
src/NixManager/: AdminEvent.hs  AdminState.hs  AskPass.hs  Bash.hs  BashDsl.hs  ChangeType.hs  Changes.hs  ComboBox.hs  Constants.hs  Css.hs  Docbook.hs  ErrorDialog.hs  HMGarbage.hs  HMGenerations.hs  HMPackagesUtil.hs  HMRebuild.hs  HMRebuildMode.hs  HMServicesUtil.hs  ManagerEvent.hs  ManagerMain.hs  ManagerState.hs  Message.hs  Nix.hs  NixExpr.hs  NixGarbage.hs  NixLocation.hs  NixPackage.hs  NixPackageMeta.hs  NixPackageSearch.hs  NixPackageStatus.hs  NixPackages.hs  NixPackagesUtil.hs  NixParser.hs  NixRebuild.hs  NixRebuildMode.hs  NixRebuildUpdateMode.hs  NixService.hs  NixServiceOption.hs  NixServiceOptionLocation.hs  NixServiceOptionType.hs  (+20 more)
src/NixManager/Admin/: BuildState.hs  DetailsState.hs  Event.hs  GarbageData.hs  RebuildData.hs  State.hs  Update.hs  ValidRebuildModes.hs  ValidRebuildTypes.hs  View.hs
src/NixManager/HMAdmin/: BuildState.hs  Event.hs  GarbageData.hs  GenerationsData.hs  GenerationsState.hs  GenerationsView.hs  RebuildData.hs  State.hs  Update.hs  View.hs
src/NixManager/HMPackages/: Event.hs  State.hs  Update.hs  View.hs
src/NixManager/HMServices/: Event.hs  State.hs  Update.hs  View.hs
src/NixManager/Services/: Download.hs  Event.hs  ServiceCategory.hs  State.hs  StateData.hs  Update.hs  View.hs
src/NixManager/View/: Admin.hs  ComboBox.hs  Css.hs  DetailsState.hs  ErrorDialog.hs  GtkUtil.hs  Icon.hs  IconName.hs  ImageButton.hs  InformationBox.hs  PackageEditView.hs  Packages.hs  ProgressBar.hs  Root.hs  ServiceEditView.hs  Services.hs
