cabal-version:       >=1.10
name:                nix-manager
version:             1.0
license-file:        LICENSE
build-type:          Simple

executable nix-manager
  main-is:             Main.hs
  other-modules:       NixManager.ManagerMain
                     , NixManager.Nix
                     , NixManager.ManagerState
                     , NixManager.ManagerEvent
                     , NixManager.PackageView
                     , NixManager.ServiceView
                     , NixManager.ComboBox
                     , NixManager.View
                     , NixManager.NixServiceOption
                     , NixManager.Message
                     , NixManager.NixParser
                     , NixManager.Util
                     , NixManager.Css
  build-depends:       base
                     , containers
                     , gi-gdk
                     , pipes
                     , scientific
                     , gi-gobject
                     , lens
                     , text
                     , regex-pcre
                     , regex-compat
                     , bytestring
                     , data-fix
                     , bifunctors
                     , process
                     , aeson
                     , vector
                     , lens-aeson
                     , gi-gtk
                     , haskell-gi-base
                     , megaparsec
                     , gi-gtk-declarative-app-simple
                     , gi-gtk-declarative
                     , filepath
                     , directory
  hs-source-dirs:    src
  default-language:    Haskell2010
  build-tools: hlint, cabal-install, brittany
  ghc-options: -Wall -threaded -Wno-unused-imports
