cabal-version:       >=1.10
name:                nix-manager
version:             1.0
license-file:        LICENSE
build-type:          Simple

executable nix-manager
  main-is:             Main.hs
  other-modules:       NixManager.ManagerMain
                     , NixManager.Nix
                     , NixManager.ManagerState
                     , NixManager.ManagerEvent
                     , NixManager.ServiceDownload
                     , NixManager.ServiceState
                     , NixManager.ServiceStateData
                     , NixManager.View.Packages
                     , NixManager.View.GtkUtil
                     , NixManager.View.Services
                     , NixManager.View.Admin
                     , NixManager.View.Root
                     , NixManager.View.ComboBox
                     , NixManager.View.Css
                     , NixManager.View.ErrorDialog
                     , NixManager.View.ProgressBar
                     , NixManager.NixServiceOption
                     , NixManager.Docbook
                     , NixManager.NixPackage
                     , NixManager.NixService
                     , NixManager.NixServiceOptionType
                     , NixManager.PackageSearch
                     , NixManager.Message
                     , NixManager.NixExpr
                     , NixManager.Util
  build-depends:       base
                     , containers
                     , gi-gdk
                     , word-wrap
                     , http-client
                     , wreq
                     , pipes
                     , scientific
                     , gi-gobject
                     , lens
                     , text
                     , regex-pcre
                     , xml-lens
                     , xml-conduit
                     , data-default
                     , regex-compat
                     , bytestring
                     , bifunctors
                     , process
                     , aeson
                     , vector
                     , lens-aeson
                     , gi-gtk
                     , haskell-gi-base
                     , megaparsec
                     , gi-gtk-declarative-app-simple
                     , gi-gtk-declarative
                     , filepath
                     , directory
  hs-source-dirs:    src
  default-language:    Haskell2010
  build-tools: hlint, cabal-install, brittany
  ghc-options: -Wall -threaded -Wno-unused-imports
