name:                nixos-manager
homepage:            https://github.com/pmiddend/nixos-manager
author:              Philipp Middendorf <pmidden@mailbox.org>
maintainer:          Philipp Middendorf <pmidden@mailbox.org>
copyright:           Philipp Middendorf <pmidden@mailbox.org>
category:            GUI
cabal-version:       >=1.10
version:             1.0
license-file:        LICENSE
build-type:          Simple

executable nix-manager
  main-is:             Main.hs
  other-modules:       NixManager.ManagerMain
                     , NixManager.ManagerState
                     , NixManager.Update
                     , NixManager.NixPackageMeta
                     , NixManager.NixRebuildMode
                     , NixManager.Changes
                     , NixManager.BashDsl
                     , NixManager.ManagerEvent
                     , NixManager.Services.Download
                     , NixManager.Services.State
                     , NixManager.Services.StateData
                     , NixManager.Services.Event
                     , NixManager.Services.Update
                     , NixManager.Services.View
                     , NixManager.Services.ServiceCategory
                     , NixManager.Packages.Event
                     , NixManager.Packages.Update
                     , NixManager.Packages.State
                     , NixManager.Packages.View
                     , NixManager.View.GtkUtil
                     , NixManager.View.Root
                     , NixManager.View.ComboBox
                     , NixManager.View.Css
                     , NixManager.View.ErrorDialog
                     , NixManager.View.ProgressBar
                     , NixManager.View.ImageButton
                     , NixManager.View.IconName
                     , NixManager.NixServiceOption
                     , NixManager.NixServiceOptionLocation
                     , NixManager.NixPackages
                     , NixManager.NixPackageStatus
                     , NixManager.Docbook
                     , NixManager.NixPackage
                     , NixManager.Constants
                     , NixManager.Process
                     , NixManager.NixService
                     , NixManager.NixRebuild
                     , NixManager.NixServiceOptionType
                     , NixManager.Admin.View
                     , NixManager.Admin.Event
                     , NixManager.Admin.State
                     , NixManager.Admin.Update
                     , NixManager.Admin.ValidRebuildTypes
                     , NixManager.Message
                     , NixManager.NixExpr
                     , NixManager.Util
  build-depends:       base
                     , containers
                     , gi-gdk
                     , word-wrap
                     , http-client
                     , wreq
                     , pipes
                     , scientific
                     , gi-gobject
                     , lens
                     , text
                     , xml-lens
                     , xml-conduit
                     , data-default
                     , bytestring
                     , bifunctors
                     , process
                     , aeson
                     , vector
                     , lens-aeson
                     , gi-gtk
                     , haskell-gi-base
                     , megaparsec
                     , gi-gtk-declarative-app-simple
                     , gi-gtk-declarative
                     , filepath
                     , directory
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-tools:       hlint, cabal-install, brittany
  ghc-options:       -Wall -threaded -Wno-unused-imports
