name:                nixos-manager
homepage:            https://github.com/pmiddend/nixos-manager
author:              Philipp Middendorf <pmidden@mailbox.org>
maintainer:          Philipp Middendorf <pmidden@mailbox.org>
copyright:           Philipp Middendorf <pmidden@mailbox.org>
category:            GUI
cabal-version:       >=1.10
version:             1.0
license-file:        LICENSE
build-type:          Simple

executable nixos-manager
  main-is:             Main.hs
  other-modules:       NixManager.BashDsl
                     , NixManager.Admin.BuildState
                     , NixManager.Admin.DetailsState
                     , NixManager.Admin.GarbageData
                     , NixManager.Admin.Event
                     , NixManager.Admin.RebuildData
                     , NixManager.Admin.State
                     , NixManager.Admin.Update
                     , NixManager.Admin.ValidRebuildTypes
                     , NixManager.Admin.View
                     , NixManager.Changes
                     , NixManager.Constants
                     , NixManager.Docbook
                     , NixManager.ManagerEvent
                     , NixManager.ManagerMain
                     , NixManager.ManagerState
                     , NixManager.Message
                     , NixManager.NixExpr
                     , NixManager.NixGarbage
                     , NixManager.NixPackage
                     , NixManager.NixPackageMeta
                     , NixManager.NixPackageStatus
                     , NixManager.NixPackages
                     , NixManager.NixRebuild
                     , NixManager.NixRebuildMode
                     , NixManager.NixRebuildUpdateMode
                     , NixManager.NixService
                     , NixManager.NixServiceOption
                     , NixManager.NixServiceOptionLocation
                     , NixManager.NixServiceOptionType
                     , NixManager.Packages.Event
                     , NixManager.Packages.PackageCategory
                     , NixManager.Packages.State
                     , NixManager.Packages.Update
                     , NixManager.Packages.View
                     , NixManager.Password
                     , NixManager.Process
                     , NixManager.AskPass
                     , NixManager.Services.Download
                     , NixManager.Services.Event
                     , NixManager.Services.ServiceCategory
                     , NixManager.Services.State
                     , NixManager.Services.StateData
                     , NixManager.Services.Update
                     , NixManager.Services.View
                     , NixManager.Update
                     , NixManager.Util
                     , NixManager.View.ComboBox
                     , NixManager.View.Css
                     , NixManager.View.ErrorDialog
                     , NixManager.View.GtkUtil
                     , NixManager.View.Icon
                     , NixManager.View.IconName
                     , NixManager.View.ImageButton
                     , NixManager.View.ProgressBar
                     , NixManager.View.Root
  build-depends:       base
                     , containers
                     , gi-gdk
                     , word-wrap
                     , http-client
                     , wreq
                     , pipes
                     , scientific
                     , gi-gobject
                     , lens
                     , text
                     , xml-lens
                     , xml-conduit
                     , data-default
                     , bytestring
                     , bifunctors
                     , process
                     , aeson
                     , vector
                     , lens-aeson
                     , gi-gtk
                     , haskell-gi-base
                     , megaparsec
                     , gi-gtk-declarative-app-simple
                     , gi-gtk-declarative
                     , filepath
                     , directory
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-tools:       hlint, cabal-install, brittany
  ghc-options:       -Wall -threaded -Wno-unused-imports
