name:                nixos-manager
homepage:            https://github.com/pmiddend/nixos-manager
author:              Philipp Middendorf <pmidden@mailbox.org>
maintainer:          Philipp Middendorf <pmidden@mailbox.org>
copyright:           Philipp Middendorf <pmidden@mailbox.org>
category:            GUI
cabal-version:       >=1.10
version:             1.0
license-file:        LICENSE
build-type:          Simple

executable nixos-manager
  main-is:             Main.hs
  other-modules:       NixManager.Admin.BuildState
                     , NixManager.Admin.Event
                     , NixManager.Admin.GarbageData
                     , NixManager.Admin.RebuildData
                     , NixManager.Admin.State
                     , NixManager.Admin.Update
                     , NixManager.Admin.ValidRebuildModes
                     , NixManager.Admin.View
                     , NixManager.AskPass
                     , NixManager.Bash
                     , NixManager.ChangeType
                     , NixManager.Constants
                     , NixManager.Docbook
                     , NixManager.HMAdmin.BuildState
                     , NixManager.HMAdmin.Event
                     , NixManager.HMAdmin.GarbageData
                     , NixManager.HMAdmin.GenerationsData
                     , NixManager.HMAdmin.GenerationsState
                     , NixManager.HMAdmin.GenerationsView
                     , NixManager.HMAdmin.RebuildData
                     , NixManager.HMAdmin.State
                     , NixManager.HMAdmin.Update
                     , NixManager.HMAdmin.View
                     , NixManager.HMGarbage
                     , NixManager.HMGenerations
                     , NixManager.HMPackages.Event
                     , NixManager.HMPackages.State
                     , NixManager.HMPackages.Update
                     , NixManager.HMPackages.View
                     , NixManager.HMPackagesUtil
                     , NixManager.HMRebuild
                     , NixManager.HMRebuildMode
                     , NixManager.HMServices.Event
                     , NixManager.HMServices.State
                     , NixManager.HMServices.Update
                     , NixManager.HMServices.View
                     , NixManager.HMServicesUtil
                     , NixManager.ManagerEvent
                     , NixManager.ManagerMain
                     , NixManager.ManagerState
                     , NixManager.Message
                     , NixManager.NixExpr
                     , NixManager.NixGarbage
                     , NixManager.NixLocation
                     , NixManager.NixPackage
                     , NixManager.NixPackageMeta
                     , NixManager.NixPackageSearch
                     , NixManager.NixPackageStatus
                     , NixManager.NixPackagesUtil
                     , NixManager.NixRebuild
                     , NixManager.NixRebuildMode
                     , NixManager.NixRebuildUpdateMode
                     , NixManager.NixService
                     , NixManager.NixServiceOption
                     , NixManager.NixServiceOptionType
                     , NixManager.NixServicesUtil
                     , NixManager.PackageCategory
                     , NixManager.Packages.Event
                     , NixManager.Packages.State
                     , NixManager.Packages.Update
                     , NixManager.Packages.View
                     , NixManager.Password
                     , NixManager.PosixTools
                     , NixManager.Process
                     , NixManager.ProgramArguments
                     , NixManager.Services.Download
                     , NixManager.Services.Event
                     , NixManager.Services.ServiceCategory
                     , NixManager.Services.State
                     , NixManager.Services.StateData
                     , NixManager.Services.Update
                     , NixManager.Services.View
                     , NixManager.Update
                     , NixManager.Util
                     , NixManager.View.ComboBox
                     , NixManager.View.Css
                     , NixManager.View.DetailsState
                     , NixManager.View.ErrorDialog
                     , NixManager.View.GtkUtil
                     , NixManager.View.Icon
                     , NixManager.View.IconName
                     , NixManager.View.ImageButton
                     , NixManager.View.InformationBox
                     , NixManager.View.PackageEditView
                     , NixManager.View.ProgressBar
                     , NixManager.View.Root
                     , NixManager.View.ServiceEditView
  build-depends:       aeson
                     , base
                     , bifunctors
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , gi-gdk
                     , gi-gobject
                     , gi-gtk
                     , gi-gtk-declarative
                     , gi-gtk-declarative-app-simple
                     , haskell-gi-base
                     , lens
                     , lens-aeson
                     , megaparsec
                     , pipes
                     , pretty-relative-time
                     , process
                     , scientific
                     , text
                     , time
                     , vector
                     , word-wrap
                     , xml-conduit
                     , xml-lens
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-tools:       hlint, cabal-install
  ghc-options:       -Wall -threaded -Wno-unused-imports -Wno-missing-signatures
